Update Display Name

--- a/SmartController/Info.plist
+++ b/SmartController/Info.plist
@@ -2,12 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>Smart Controller 需要使用蓝牙才能连接到设备。</string>
-	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>Smart Controller 需要使用蓝牙才能连接到设备。</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>智能控制器</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -24,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Smart Controller 需要使用蓝牙才能连接到设备。</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Smart Controller 需要使用蓝牙才能连接到设备。</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
